# small-llm-pdf-extract

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-19-slm-pdf-design.md
pdfs/: generate_sample.py
src/slm_pdf/: cli.py  models.py  parser.py  pipeline.py  renderer.py  vlm_client.py
tests/: test_cli.py  test_models.py  test_parser.py  test_pipeline.py  test_renderer.py  test_vlm_client.py
